--- a/css/custom.css
+++ b/css/custom.css
@@ -1746,6 +1746,8 @@ header.main-header .header-sticky.active{
 	margin-bottom: 30px;
 	transition: all 0.3s ease-in-out;
 	overflow: hidden;
+	background-color: #FF9900;
+	color: #fff;
 }
 
 .process-step-item:last-child{
@@ -1760,12 +1762,13 @@ header.main-header .header-sticky.active{
 	bottom: 0;
 	left: 0;
     right: 0;
-    background: var(--accent-color);
+    background: #fff;
 	width: 100%;
     height: 0;
     transition: all 0.4s ease-in-out;
 	z-index: 0;
 }
+
 
 .process-step-item.active:before,
 .process-step-item:hover:before{
@@ -1783,7 +1786,7 @@ header.main-header .header-sticky.active{
 .process-step-no h2{
 	font-size: 50px;
 	font-weight: 700;
-	color: var(--accent-color);
+	color: #fff;
 	transition: all 0.3s ease-in-out;
 }
 
@@ -1811,7 +1814,7 @@ header.main-header .header-sticky.active{
 .process-step-item:hover .process-step-content p,
 .process-step-item:hover .process-step-content h3,
 .process-step-item:hover .process-step-no h2{
-	color: var(--white-color);
+	color: #000;
 }
 
 /************************************/
@@ -2330,7 +2333,7 @@ header.main-header .header-sticky.active{
 
 .footer-links ul li{
 	color: var(--white-color);
-	text-transform: capitalize;
+	
 	margin-bottom: 15px;
 }
 
