--- a/css/custom.css
+++ b/css/custom.css
@@ -6568,7 +6568,7 @@ header.main-header .header-sticky.active{
 .custom-product-info {
     padding: 25px 22px;
     text-align: center;
-	height: 120px;
+	height: 80px;
 	background-color: #1E90FF;
 }
 
@@ -6583,9 +6583,9 @@ header.main-header .header-sticky.active{
 .custom-product-info h4 a {
     color: #fff; 
     text-decoration: none;
-    font-size: 34px; 
-    font-weight: 700; 
-    line-height: 1.4;
+    font-size: 24px; 
+    font-weight: 900; 
+    line-height: 1;
     letter-spacing: 0.5px;
     display: inline-block;
     transition: color 0.3s ease;
@@ -6617,3 +6617,7 @@ header.main-header .header-sticky.active{
     }
 }
 
+.custom-product-card .hero-btn{
+	margin: 5px;
+	align-self: center;
+}
