--- a/css/custom.css
+++ b/css/custom.css
@@ -6637,3 +6637,9 @@ header.main-header .header-sticky.active{
     line-height: 1.2;
     margin: 0;
 }
+.site-logo img{
+	height: 80px;
+}
+.navbar-brand img{
+	height: 80px;
+}
