--- a/css/custom.css
+++ b/css/custom.css
@@ -76,7 +76,7 @@ h6{
 	margin :0;
 	font-weight: 700;
 	line-height: 1.2em;
-	color: var(--primary-color);
+	color: #0f74d1;
 }
 
 figure{
@@ -2368,7 +2368,7 @@ header.main-header .header-sticky.active{
 
 .page-header{
 	position: relative;
-	background: url('../images/page-header-bg.jpg') no-repeat center center;
+	background: url('../images/banner/1.jpg') no-repeat center center;
 	background-size: cover;
 	padding: 150px 0;
 }
@@ -3132,7 +3132,7 @@ header.main-header .header-sticky.active{
     position: relative;
 	display: block;
     text-transform: capitalize;
-    color: var(--text-color);
+    color:#000;
     transition: all 0.3s ease-in-out;
 }
 
@@ -3325,7 +3325,6 @@ header.main-header .header-sticky.active{
 
 .service-entry ul li{
 	position: relative;
-	width: calc(33.33% - 20px);
     color: var(--primary-color);
     text-transform: capitalize;
 	padding-left: 40px;
@@ -6630,13 +6629,7 @@ header.main-header .header-sticky.active{
   }
 }
 
-.custom-product-info p {
-    font-size: 16px;
-    color: #000;
-	font-weight: 500;
-    line-height: 1.2;
-    margin: 0;
-}
+
 .site-logo img{
 	height: 80px;
 }
